force-app/main/default/objects/ConfiguracoesIntegracaoSkyTrac__c/ConfiguracoesIntegracaoSkyTrac__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Configurações Integração SkyTrac</label>
</CustomObject>