force-app/main/default/objects/ConfiguracoesIntegracaoSkyTrac__c/fields/CodigoVoo__c.field-meta.xml
<CustomField>
    <fullName>CodigoVoo__c</fullName>
    <label>Código do Voo</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>