force-app/main/default/objects/ConfiguracoesIntegracaoSkyTrac__c/fields/CorteISAT100__c.field-meta.xml
<CustomField>
    <fullName>CorteISAT100__c</fullName>
    <defaultValue>101</defaultValue>
    <description>Código de corte para ISAT - 100</description>
    <inlineHelpText>Código de corte para ISAT - 100</inlineHelpText>
    <label>Corte - ISAT-100</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>