force-app/main/default/objects/ConfiguracoesIntegracaoSkyTrac__c/fields/CorteManual__c.field-meta.xml
<CustomField>
    <fullName>CorteManual__c</fullName>
    <description>Armazena o código posntype que chega no xml do skytrac q indica o corte da aeronave</description>
    <inlineHelpText>Armazena o código posntype que chega no xml do skytrac q indica o corte da aeronave</inlineHelpText>
    <label>Corte Manual</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>