force-app/main/default/objects/ConfiguracoesIntegracaoSkyTrac__c/fields/Cut__c.field-meta.xml
<CustomField>
    <fullName>Cut__c</fullName>
    <label>Corte dos Motores</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>