force-app/main/default/objects/ConfiguracoesIntegracaoSkyTrac__c/fields/Decolagem__c.field-meta.xml
<CustomField>
    <fullName>Decolagem__c</fullName>
    <label>Decolagem</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>