force-app/main/default/objects/ConfiguracoesIntegracaoSkyTrac__c/fields/Executar__c.field-meta.xml
<CustomField>
    <fullName>Executar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Define se vai executar o agendamento para verificar se voo foi finalizado ao fim do rastreamento</description>
    <inlineHelpText>Define se vai executar o agendamento para verificar se voo foi finalizado ao fim do rastreamento</inlineHelpText>
    <label>Executar</label>
    <type>Checkbox</type>
</CustomField>