force-app/main/default/objects/ConfiguracoesIntegracaoSkyTrac__c/fields/FimMissao__c.field-meta.xml
<CustomField>
    <fullName>FimMissao__c</fullName>
    <label>Fim da Missão</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>