force-app/main/default/objects/ConfiguracoesIntegracaoSkyTrac__c/fields/Ligado__c.field-meta.xml
<CustomField>
    <fullName>Ligado__c</fullName>
    <label>Acionamento dos Motores</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>