force-app/main/default/objects/ConfiguracoesIntegracaoSkyTrac__c/fields/LigadoISAT100__c.field-meta.xml
<CustomField>
    <fullName>LigadoISAT100__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Código de acionamento para ISAT-100</description>
    <inlineHelpText>Código de acionamento para ISAT-100</inlineHelpText>
    <label>Ligado - ISAT-100</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>