force-app/main/default/objects/ConfiguracoesIntegracaoSkyTrac__c/fields/LigadoManual__c.field-meta.xml
<CustomField>
    <fullName>LigadoManual__c</fullName>
    <description>Armazena o código posntype que chega no xml do skytrac q indica o acionamento da aeronave</description>
    <inlineHelpText>Armazena o código posntype que chega no xml do skytrac q indica o acionamento da aeronave</inlineHelpText>
    <label>Ligado Manual</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>