force-app/main/default/objects/ConfiguracoesIntegracaoSkyTrac__c/fields/Pouso__c.field-meta.xml
<CustomField>
    <fullName>Pouso__c</fullName>
    <label>Pouso</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>