force-app/main/default/objects/ConfiguracoesIntegracaoSkyTrac__c/fields/RaioConsiderado__c.field-meta.xml
<CustomField>
    <fullName>RaioConsiderado__c</fullName>
    <description>Qualquer ponto que venha do log que esteja localizado, no máximo, nesse raio de distância de um local, será considerado que o log é referente a aquele local.</description>
    <inlineHelpText>Qualquer ponto que venha do log que esteja localizado, no máximo, nesse raio de distância de um local, será considerado que o log é referente a aquele local.</inlineHelpText>
    <label>Raio considerado (Milhas náuticas)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>